--- a/lab8/styles.css
+++ b/lab8/styles.css
@@ -132,6 +132,7 @@ body {
   aspect-ratio: 1/1;
   width: 38px;
   height: 38px;
+  cursor: pointer;
 }
 
 .header-left2 {
@@ -348,14 +349,6 @@ body {
   display: block;
 }
 
-.price {
-  width: 85px;
-  height: 45px;
-  background-color: #50be77;
-  position: absolute;
-  box-sizing: border-box;
-}
-
 .courseName {
   width: 100%;
   height: 40px;
@@ -377,6 +370,8 @@ body {
 }
 
 .price {
+  width: 85px;
+  height: 45px;
   position: absolute;
   bottom: -20px;
   right: 0;
