Remove fixed width from .footer-wrapper and improve adaptability

--- a/lab8/styles.css
+++ b/lab8/styles.css
@@ -536,7 +536,8 @@ body {
 }
 
 .footer-wrapper {
-  height: 238px;
+  height: auto;
+  min-height: 238px;
   width: auto;
   display: flex;
   flex-direction: row;
